2010-05-23 Carlo Baldassi <carlobaldassi@gmail.com>
	* modified: put back help files
	* bugfix: fixed Windows localization
	* bugfix: flush displays when cancelling
	  unfinished work on aux layers

2010-03-30 Carlo Baldassi <carlobaldassi@gmail.com>
	* modified: stripped offline help files

2010-03-21 Carlo Baldassi <carlobaldassi@gmail.com>
	* modified: pressing "back" in the interactive
	  dialog saves the plugin values
	* modified: removed "Cancel" button from mask
	  editor mode
	* modified: if mask editor mode dialog is closed
	  when working on a new layer, that layer is
	  removed

2010-03-20 Carlo Baldassi <carlobaldassi@gmail.com>
	* bugfix: thumbnail creation error under some
	  circumstances (preview.c)

2010-03-14 Carlo Baldassi <carlobaldassi@gmail.com>
	* bugfix: removed legacy liblqr macro call
	  in io_functions.c
	* modified: updated liblqr required version
	  to 0.4.0

2010-02-25 Carlo Baldassi <carlobaldassi@gmail.com>
	* modified: no longer use extra layers for
	  preview display

2010-02-23 Carlo Baldassi <carlobaldassi@gmail.com>
	* new: output on new image option
	* modified: output target is reset when coming
	  back from interactive mode
	* bugfix: fixed some minor issues arising
	  when working on a new layer and going back
	  and forth through interactive/non-interactive
	  modes (undo groups, layer selections)

2010-02-22 Carlo Baldassi <carlobaldassi@gmail.com>
	* modified: if an aux layer is deleted during or
	  between sessions, it is not substitued by another
	  one and the corresponding setting is made inactive
	* modified: updated code to complain with GTK >= 2.12

2010-02-20 Carlo Baldassi <carlobaldassi@gmail.com>
	* new: reduced interface when editing aux layers
	* modified: text in new and edit buttons for
	  aux layers; inverted new/edit positions
	* modified: active layer goes back to the one
	  which is to be rescaled after creating/editing
	  aux layers
	* modified: interactive dialog stays above
	  other windows